[gd_scene load_steps=14 format=2]

[ext_resource path="res://5. User Interfaces/PixelMechaBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://5. User Interfaces/Textures/Window/512_256/window.png" type="Texture" id=2]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_default.png" type="Texture" id=3]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_over.png" type="Texture" id=4]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_down.png" type="Texture" id=5]
[ext_resource path="res://5. User Interfaces/Save Game Menu/Save Game Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x128/button_default.png" type="Texture" id=7]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x128/button_over.png" type="Texture" id=8]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x128/button_down.png" type="Texture" id=9]
[ext_resource path="res://5. User Interfaces/Save Game Menu/Save Game Menu.gd" type="Script" id=10]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_disabled.png" type="Texture" id=11]
[ext_resource path="res://5. User Interfaces/Level Map/Level Map.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Save Game Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
level_select_scene = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.231373, 0.568627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_right = 517.0
margin_bottom = 25.0
rect_min_size = Vector2( 517, 25 )

[node name="Control2" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 29.0
margin_right = 517.0
margin_bottom = 54.0
rect_min_size = Vector2( 517, 25 )

[node name="Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = -15.0
margin_right = 258.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.756863, 0.890196, 0.258824, 1 )
text = "Select Game File"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 58.0
margin_right = 517.0
margin_bottom = 186.0
rect_min_size = Vector2( 517, 125 )

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 37.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 475.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 25
columns = 3

[node name="Game One Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 128.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )

[node name="Game One Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game One Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.709804, 0.376471, 1, 1 )
text = "Game One"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Two Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 153.0
margin_right = 281.0
margin_bottom = 128.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )

[node name="Game Two Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game Two Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.709804, 0.376471, 1, 1 )
text = "Game Two"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Three Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 306.0
margin_right = 434.0
margin_bottom = 128.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )

[node name="Game Three Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game Three Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.709804, 0.376471, 1, 1 )
text = "Game Three"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 479.0
margin_right = 517.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 190.0
margin_right = 517.0
margin_bottom = 190.0
rect_min_size = Vector2( 517, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 194.0
margin_right = 517.0
margin_bottom = 258.0

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 81.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Select Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 85.0
margin_right = 213.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 11 )

[node name="Select Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Select Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.709804, 0.376471, 1, 1 )
text = "Start Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 217.0
margin_right = 299.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Delete Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 303.0
margin_right = 431.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 11 )

[node name="Delete Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Delete Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.709804, 0.376471, 1, 1 )
text = "Delete 
Saved Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 435.0
margin_right = 517.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -16.5
margin_right = 63.5
margin_bottom = 16.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
max_length = 12
expand_to_text_length = true
placeholder_text = "Insert Name"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game One Button" to="." method="_on_Game_One_Button_toggled"]
[connection signal="toggled" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game Two Button" to="." method="_on_Game_Two_Button_toggled"]
[connection signal="toggled" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/GridContainer/Game Three Button" to="." method="_on_Game_Three_Button_toggled"]
[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Select Button" to="." method="_on_Select_Button_pressed"]
[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Delete Button" to="." method="_on_Delete_Button_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
